[package]
name = "learn_rust_bugs"
version = "0.1.0"
edition = "2021"
description = "Self-learning Rust"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"


[lib]
name = "library"
path = "src/lib.rs"

[[bin]]
name = "binary"
path = "src/main.rs"

